# OfflineTourGuide

./: .gitignore  PHASE2_PLAN.md  PLAN.md  README.md  data_extraction.py  main.py  pyproject.toml
config/: __init__.py  eval_template.json  evaluation.py
data_extraction/: __init__.py  cursor.py  dump_activations.py  example_usage.py  extract.py  runpod_utils.py
eval/: eval.py
eval/samples/: 4RRH475G+9JG_en.txt
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChatInterface.css  ChatInterface.tsx
frontend/src/services/: api.ts
frontend/src/types/: open-location-code.d.ts
frontend/src/utils/: geocache.ts  location.ts
gitignored/: id_git.pub
model/: ACTIVATION_PRUNING_FAQ.md  PRUNING_GUIDE.md  README.md  README_LOCAL.md  RUNPOD_EXECUTE.md  RUNPOD_SETUP.md  __init__.py  activation_analyzer.py  activation_recorder.py  example_pruning.py  finetune.py  pruner.py  pruning_pipeline.py  vllm_activation_recorder.py
notebooks/: qa_toggle_metrics.ipynb
pipeline/: __init__.py  dataset_ledger.py  report_generator.py  run_scaffolder.py  utils.py
prompts/: claude-tour-guide.md  meta_prompt.md  tour_stop.md
research/: forward-chop-rotate.md  negative-sampling.md  sources.txt  split-compression-strategy.md
samples/: 46H4+8M.txt  4RRH454R+MQ_en.txt  4RRH4678+GR_en.txt  4RRH46H4+8M_en.txt  4RRH46H6+9J_en.txt  4RRH46P8+8J_en.txt  4RRH46R5+VC_en.txt  4RRH46V8+74_en.txt  4RRH46X6+38_en.txt  587G+VF_pt.txt  588F+5H_pt.txt  589R2QXQ+6R_pt.txt  58QP+8M_pt.txt  58XC+PQ_pt.txt  6PH58P3Q+7M_en.txt  7GWHC22M+5P_ar.txt  7GWHF3QM+7R_ar.txt  7GWHF3QM+7R_en.txt  7GWHF3QM+8Q_ar.txt  7GWHF3RM+6P_ar.txt  7GWHF3RM+7P_ar.txt  7JFJ3QMH+8R_hi.txt  7JFJ3RGH+6M_hi.txt  7JFJ3RMH+7P_hi.txt  7P52R7CH+6R_th.txt  7P52R7FH+3Q_th.txt  7P52R7GH+4P_en.txt  7P52R7GH+4P_th.txt  7P52R7GH+5M_en.txt  7P52R7GH+5M_th.txt  7P52R7MH+8P_en.txt  7P52R7MH+8P_th.txt  87G8P2JX+4Q_en.txt  8FH2VH7H+3R_en.txt  8FH2VH7H+3R_it.txt  8FH2VH8H+2Q_it.txt  8FH48W3M+8P_es.txt  8FH48X3M+R7_es.txt  8FH48X5P+6M_es.txt  8FH4C2M8+5Q_es.txt  (+72 more)
tests/: test_eval_metrics.py  test_rotations.py
transport/: __init__.py  activation_cache.py  apply_transforms.py  permutations.py  rotation_cli.py  rotations.py  weight_ops.py  width_chop.py
