[project]
name = "offlinetourguide"
version = "0.1.0"
description = "Transport + QA scaffolding for Offline Tour Guide pruning runs"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "numpy>=1.26.0",
    "pytest>=7.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
    "compressed-tensors>=0.12.2",
    "accelerate>=1.12.0",
]

[tool.pyright]
include = ["config", "data_extraction", "main.py", "model", "pipeline", "transport", "tests"]

exclude = ["**/__pycache__", "**/node_modules", ".venv", "venv"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportUnusedClass = true
reportUnusedFunction = true
reportDuplicateImport = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
pythonVersion = "3.12"
typeCheckingMode = "basic"
